Fixed time alignment

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -41,6 +41,7 @@ html {
                                 font-family: 'JetBrains Mono';
                                 font-weight: 500;
                                 font-size: 60px;
+                                text-align: center;
                             }
                     
                             .button-container {
